# nanocodex

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  EVENT_ARCHITECTURE_REFACTOR.md  Justfile  LICENSE-MIT  PLAN.md  README.md  a.sh  cliff.toml  deny.toml  docker-compose.otel.yml  pyproject.toml  release.toml  typos.toml
.github/: RELEASE_TEMPLATE.md
.github/workflows/: ci.yml  docker.yml  js-preview.yml  nightly.yml  release.yml
benchmarks/: long_prompt_profile_2026-07-20.md
bindings/python/: Cargo.toml  README.md
bindings/python/src/: lib.rs
bindings/python/tests/: test_binding.py
bindings/wasm/: Cargo.toml  README.md
crates/harness-agent/: Cargo.toml
crates/harness-agent/examples/: custom_tool.rs  follow_on.rs
crates/harness-agent/src/: agent.rs  error.rs  lib.rs  protocol.rs  responses.rs
crates/harness-agent/src/model/: agent.rs  agent_tests.rs  compaction.rs  context_manager.rs  input.rs  mod.rs  telemetry.rs
crates/harness-agent/tests/: tool_macro.rs
crates/harness-core/: Cargo.toml
crates/harness-macros/: Cargo.toml
crates/harness-service/: Cargo.toml
crates/harness-service/benches/: tower_responses.rs
crates/harness-service/src/: attempt.rs  client.rs  lib.rs  service.rs  service_error.rs  socket.rs  stream.rs  telemetry.rs
crates/harness-service/src/middleware/: mod.rs  retry.rs
crates/harness-tools/: Cargo.toml
crates/harness-tools/src/: lib.rs  plan.rs  runtime.rs  view_image.rs
crates/harness-tools/src/apply_patch/: mod.rs
crates/harness-tools/src/code_mode/: description.rs  host.rs  mod.rs  tests.rs
crates/harness-tools/src/image/: mod.rs
crates/harness-tools/src/image_generation/: mod.rs  tests.rs
crates/harness-tools/src/shell/: mod.rs  tool.rs
crates/harness-tools/src/web_search/: history.rs  mod.rs  web_run_description.md  wire.rs
crates/mpp-egress/: Cargo.toml
crates/mpp-egress/src/: lib.rs
crates/nanocodex/: CHANGELOG.md  Cargo.toml
crates/nanocodex-core/: CHANGELOG.md  Cargo.toml
crates/nanocodex-core/benches/: fork_history.rs
crates/nanocodex-core/prompts/: system.md
crates/nanocodex-core/src/: auth.rs  events.rs  lib.rs
crates/nanocodex-core/src/responses/: content.rs  event.rs  item.rs  mod.rs  request.rs
crates/nanocodex-macros/: CHANGELOG.md  Cargo.toml
crates/nanocodex-macros/src/: lib.rs
crates/nanocodex-mcp/: CHANGELOG.md  Cargo.toml
crates/nanocodex-mcp/src/: catalog.rs  client.rs  lib.rs
crates/nanocodex-mcp/tests/fixtures/: stdio-server.mjs
crates/nanocodex-observability/: CHANGELOG.md  Cargo.toml
crates/nanocodex-observability/src/: lib.rs
crates/nanocodex-service/: CHANGELOG.md  Cargo.toml
crates/nanocodex-service/benches/: tower_responses.rs
crates/nanocodex-service/src/: attempt.rs  error.rs  error_wasm.rs  http.rs  lib.rs  service.rs  service_error.rs  socket.rs  socket_wasm.rs  stream.rs  telemetry.rs
crates/nanocodex-service/src/middleware/: retry.rs
crates/nanocodex-tools/: CHANGELOG.md  Cargo.toml
crates/nanocodex-tools/src/: lib.rs  plan.rs  runtime.rs  standard.rs  view_image.rs  wasm.rs
crates/nanocodex-tools/src/apply_patch/: mod.rs  parser.rs  seek_sequence.rs
crates/nanocodex-tools/src/code_mode/: bootstrap.js  description.rs  embedded.rs  mod.rs  output.rs  protocol.rs  runtime.js  spec.rs  tests.rs
crates/nanocodex-tools/src/hashline/: block.rs  format.rs  hash.rs  mod.rs  patch.rs  patch_lines.rs  patch_parser.rs  patch_sections.rs  tests.rs  transaction_fs.rs
crates/nanocodex-tools/src/image/: mod.rs
crates/nanocodex-tools/src/image_generation/: mod.rs  tests.rs
crates/nanocodex-tools/src/shell/: mod.rs  output.rs  process.rs  selection.rs  tool.rs
crates/nanocodex-tools/src/web_search/: history.rs  mod.rs  wire.rs
crates/nanocodex-tools/tests/: tracing.rs
crates/nanocodex/examples/: custom_tool.rs  follow_on.rs  minimal.rs
crates/nanocodex/src/: agent.rs  auth.rs  error.rs  lib.rs  responses.rs  rollout.rs  session.rs  wasm.rs
crates/nanocodex/src/model/: agent.rs  agent_tests.rs  agents_md.rs  agents_md_wasm.rs  compaction.rs  context_manager.rs  input.rs  mod.rs  telemetry.rs
crates/nanocodex/tests/: tool_macro.rs
docs/: BROWSER_COMPUTER_USE_PLAN.md  HARBOR_RS_LOG.md  MPP.md  OBSERVABILITY.md  ORCHESTRATION_DECISION_CONTEXT.md  RELEASING.md  RESPONSES_TOWER.md  RESPONSES_TOWER_REWRITE.md  RESPONSE_TRANSPORT_BENCH.md  TUI_NOTES.md
evals/: history-derived-codex.yaml  history-derived.yaml  tb21-completion-audit-four-k5.yaml  terminal-bench-2-1-leaderboard-high.yaml  terminal-bench-2-acceptance-fidelity-high-failures.yaml  terminal-bench-2-anytime-finalization-high-failures.yaml  terminal-bench-2-budget-aware-high-failures.yaml  terminal-bench-2-budget-aware-high.yaml  terminal-bench-2-finalization-review-high-failures.yaml  terminal-bench-2-high-frozen-resume.yaml  terminal-bench-2-high-resume.yaml  terminal-bench-2-high-toolchain-rerun.yaml  terminal-bench-2-high.yaml  terminal-bench-2-query-xhigh-acceptance-fidelity.yaml  terminal-bench-2-query-xhigh-frozen.yaml  terminal-bench-2-semantic-boundaries-high.yaml  terminal-bench-2-stabilized-finalization-high.yaml  terminal-bench-2-stock-codex-high-failures.yaml  terminal-bench-2-xhigh-frozen-first-three-failures.yaml  terminal-bench-2.yaml
evals/pytest/: Dockerfile
examples/: Cargo.toml  README.md  follow_on.rs  fork_conversations.rs  lifecycle.rs  response_transport_bench.rs  resume.rs  task-start.jsonl
examples/browser-cdn/: README.md  index.html
harbor/: fast-eval.compose.yaml  fast-stop.compose.yaml  fast-verifier.Dockerfile  fast-verifier.sh
harbor_adapter/: __init__.py  agent.py  codex.py  environment.py  harness.Dockerfile  local_docker.py  nanocodex.Dockerfile  test_agent.py  verifier.py
scripts/: build-js-package.sh  changelog.sh  code-mode-batch.sh
specs/: hashline-read-patch-transaction-integration.md
src/: error.rs  lib.rs  main.rs  protocol.rs  responses.rs  shell.rs
web/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  worker-configuration.d.ts  wrangler.jsonc
(+158 files in other folders)
