[package]
name = "harness"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
publish = false

[dependencies]
clap = { version = "4.5.54", features = ["derive", "env"] }
eyre = "0.6.12"
futures-util = "0.3.31"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["macros", "net", "process", "rt-multi-thread", "time"] }
tokio-tungstenite = { version = "0.30.0", default-features = false, features = ["connect", "rustls-tls-webpki-roots"] }
rustls = { version = "0.23.42", default-features = false, features = ["ring", "std"] }

# Optimized enough for representative CPU profiles while retaining full symbols.
[profile.profiling]
inherits = "release"
debug = 2
strip = false

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = "warn"
pedantic = "warn"
