[project]
name = "openai-nanocodex-adapter"
version = "0.1.0"
description = "Harbor integration for the Rust nanocodex"
requires-python = ">=3.13,<3.14"
dependencies = [
    # Pin an official nightly wheel instead of a raw Git checkout. Harbor's
    # release pipeline embeds the viewer frontend; wheels built directly from
    # Git contain only the API server because the frontend is a CI artifact.
    "harbor[daytona]==0.18.1.dev202607150126",
    # Harbor's own lock uses this universal wheel. Newer unconstrained releases
    # currently fall back to a slow, broken native build on macOS arm64.
    "litellm==1.86.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["harbor_adapter"]

[tool.hatch.metadata]
allow-direct-references = true
