[package]
name = "nanocodex-examples"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "Public Nanocodex library examples"

[dependencies]
eyre.workspace = true
nanocodex.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "sync"] }

[[bin]]
name = "minimal"
path = "minimal.rs"

[[bin]]
name = "follow-on"
path = "follow_on.rs"

[[bin]]
name = "custom-tool"
path = "custom_tool.rs"

[[bin]]
name = "subagents"
path = "subagents.rs"

[[bin]]
name = "mcp"
path = "mcp.rs"

[lints]
workspace = true
