[package]
name = "nanocodex-examples"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "Public Nanocodex library examples"

[dependencies]
dotenvy.workspace = true
eyre.workspace = true
futures-util.workspace = true
http.workspace = true
nanocodex.workspace = true
reqwest.workspace = true
rustls.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "sync", "time"] }
tokio-tungstenite.workspace = true
tower.workspace = true

[[bin]]
name = "minimal"
path = "minimal.rs"

[[bin]]
name = "follow-on"
path = "follow_on.rs"

[[bin]]
name = "resume"
path = "resume.rs"

[[bin]]
name = "lifecycle"
path = "lifecycle.rs"

[[bin]]
name = "custom-tool"
path = "custom_tool.rs"

[[bin]]
name = "subagents"
path = "subagents.rs"

[[bin]]
name = "mcp"
path = "mcp.rs"

[[bin]]
name = "fork-conversations"
path = "fork_conversations.rs"

[[bin]]
name = "fork-checkpoint-bench"
path = "fork_checkpoint_bench.rs"

[[bin]]
name = "response-transport-bench"
path = "response_transport_bench.rs"

[[bin]]
name = "codex-parity-bench"
path = "codex_parity_bench.rs"

[lints]
workspace = true
