[package]
name = "harness-agent"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true

[dependencies]
base64.workspace = true
chrono.workspace = true
harness-core.workspace = true
harness-service.workspace = true
harness-tools.workspace = true
image.workspace = true
iana-time-zone.workspace = true
serde.workspace = true
serde_json.workspace = true
sha1.workspace = true
thiserror.workspace = true
tokio.workspace = true
tower.workspace = true

[dev-dependencies]
eyre.workspace = true
futures-util.workspace = true
tokio-tungstenite.workspace = true

[lints]
workspace = true
