[package]
name = "harness-service"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true

[dependencies]
futures-util.workspace = true
harness-core.workspace = true
rustls.workspace = true
serde.workspace = true
serde_json.workspace = true
smallvec.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true
tower.workspace = true

[dev-dependencies]
criterion.workspace = true
eyre.workspace = true
simd-json.workspace = true
smallvec.workspace = true
sonic-rs.workspace = true

[[bench]]
name = "tower_responses"
harness = false

[lints]
workspace = true
