[package]
name = "nanocodex-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "Typed model, event, and Responses protocol primitives for Nanocodex"

[dependencies]
serde.workspace = true
serde_json.workspace = true
smallvec.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["sync"] }

[lints]
workspace = true
