[package]
name = "nanocodex-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Typed model, event, and Responses protocol primitives for Nanocodex"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["-D", "warnings"]

[dependencies]
serde.workspace = true
serde_json.workspace = true
smallvec.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["sync"] }

[dev-dependencies]
criterion.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

[[bench]]
name = "fork_history"
harness = false

[lints]
workspace = true
