[package]
name = "nanocodex-macros"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro-crate.workspace = true
proc-macro2.workspace = true
quote.workspace = true
syn.workspace = true

[lints]
workspace = true
